--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "dialogflow": "^0.10.2",
+    "dialogflow-fulfillment": "^0.6.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "request": "^2.88.0"
