--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ppsis14/dialogflow-nodeJS#readme",
   "dependencies": {
+    "@line/bot-sdk": "^6.8.0",
     "actions-on-google": "^2.9.0",
     "body-parser": "^1.19.0",
     "dialogflow": "^0.10.2",
