--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@line/bot-sdk": "^6.8.0",
     "actions-on-google": "^2.9.0",
     "body-parser": "^1.19.0",
+    "csvtojson": "^2.0.10",
     "dialogflow": "^0.10.2",
     "dialogflow-fulfillment": "^0.6.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "mysql": "^2.17.1",
     "request": "^2.88.0"
   }
 }
