can connect to db

--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ Issue
 
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=tpmap_user
-DB_NAME=tpmap
-DB_PWD=tpmap_pwd
+DB_USER=root
+DB_NAME=tpmap_db
+DB_PWD=testRoot1234
